# app/Models/Book.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Book extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'title',
+        'author',
+        'publisher',
+        'published_date',
+    ];
+
+    protected $dates = [
+        'published_date',
+    ];
+}
